# tokenlytics

./: .gitignore  Cargo.toml  LICENSE  README.md  dashboard.html  otel-receiver.js  package.json  parser.js  run  server.js  tokenlytics.sh
.github/workflows/: release.yml
scripts/: cf-origin-install.sh  vps-deploy.sh
src/: main.rs
