[package]
name = "tokenlytics"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "Realtime token tracker for Claude Code + Codex. CLI + web dashboard, all local. Optionally compete on a global leaderboard."
repository = "https://github.com/ultracontext/tokenlytics"
homepage = "https://ultracontext.com/tokenlytics"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cliclack = "0.5"
console = "0.16"
libc = "0.2"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
